[tool.poetry]
name = "eviex"
version = "0.0.0"
description = "EVents Inverted indEX"
authors = ["Lou Marvin Caraig <loumarvincaraig@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
