[tool.poetry]
name = "eviex"
version = "0.0.0"
description = "EVents Inverted indEX"
authors = ["Lou Marvin Caraig <loumarvincaraig@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = {extras = ["pyproject"], version = "^5.6.3"}
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-docstrings = "^1.5.0"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
flake8-commas = "^2.0.0"
flake8-isort = "^4.0.0"
flake8-builtins = "^1.5.3"

[tool.isort]
force_single_line = true
order_by_type = true
lines_after_imports = 2
indent = "    "
atomic = true
sections = "STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"
known_first_party = "eviex"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
