[tool.poetry]
name = "eviex"
version = "0.1.0"
description = "EVents Inverted indEX"
license = "Apache-2.0"
authors = ["Lou Marvin Caraig <loumarvincaraig@gmail.com>"]
readme = "README.md"
repository = "https://github.com/se7entyse7en/eviex"

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.1.3"
numpy = "^1.19.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = {extras = ["pyproject"], version = "^5.6.3"}
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-docstrings = "^1.5.0"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
flake8-commas = "^2.0.0"
flake8-isort = "^4.0.0"
flake8-builtins = "^1.5.3"
bumpversion = "^0.6.0"
pytest-cov = "^2.10.1"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-asyncio = "^0.14.0"

[tool.isort]
force_single_line = true
order_by_type = true
lines_after_imports = 2
indent = "    "
atomic = true
sections = "STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"
known_first_party = "eviex"

[tool.coverage.run]
branch = true

[tool.coverage.paths]
source = ["eviex/"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
